--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/drawer": "^7.0.13",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/elements": "^2.1.7",
+    "@react-navigation/native": "^7.0.8",
+    "@react-navigation/native-stack": "^7.1.9",
+    "@react-navigation/stack": "^7.0.13",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -38,9 +42,10 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "react-router-native": "^5.2.1"
@@ -52,6 +57,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "react-router-dom": "^7.0.1",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
