--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@kan9229/react-native-translator": "^0.0.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/drawer": "^7.0.13",
@@ -29,18 +30,24 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
+    "expo-localization": "^16.0.0",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "i18next": "^24.0.5",
     "lottie-react-native": "^7.1.0",
     "moti": "^0.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.1.3",
     "react-native": "0.76.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
