--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-textarea": "^1.0.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
