--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "^16.0.3",
     "expo-linking": "~7.0.3",
     "expo-localization": "^16.0.0",
     "expo-router": "~4.0.9",
@@ -51,6 +52,7 @@
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-splash-screen": "^3.3.0",
