--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "firebase": "^11.1.0",
     "i18next": "^24.0.5",
     "lottie-react-native": "^7.1.0",
     "moti": "^0.29.0",
