--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@react-navigation/native-stack": "^7.1.9",
     "@react-navigation/stack": "^7.0.13",
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "^16.0.3",
@@ -50,9 +52,12 @@
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-paper": "^5.12.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.12.0",
