--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
-    "expo-image-picker": "^16.0.3",
+    "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.3",
     "expo-localization": "^16.0.0",
     "expo-router": "~4.0.9",
@@ -64,6 +64,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-textarea": "^1.0.4",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
