--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "18.3.1",
     "react-i18next": "^15.1.3",
     "react-native": "0.76.3",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
